# atlas

./: .dockerignore  .env.example  .env.production.example  .gitignore  .npmrc  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.yaml  docker-compose.yml  eslint.config.js  openstatus.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.scripts.json  turbo.json
.claude/: settings.json
.codex/: config.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  codeql.yml  (+1 more)
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
api/atlas/: __init__.py  config.py  db_init.py  main.py  seed_profiles.py
api/atlas/api/: __init__.py  discovery.py  entries.py  taxonomy.py
api/atlas/domains/: __init__.py
api/atlas/domains/access/: __init__.py  api_keys.py  capabilities.py  challenges.py  dependencies.py  internal.py  irs_lookup.py  jwt.py  membership.py  permissions.py  principals.py  verification.py
api/atlas/domains/access/api/: __init__.py  health.py  lists.py  verification.py  verification_admin.py
api/atlas/domains/access/models/: follows.py  saved_lists.py
api/atlas/domains/catalog/: __init__.py  place_profiles.py
api/atlas/domains/catalog/api/: __init__.py  entries.py  feed.py  org_annotations.py  org_resources.py  profiles.py  public.py  taxonomy.py
api/atlas/domains/catalog/models/: __init__.py  connections.py  entry.py  ownership.py  profile_claims.py  source.py
api/atlas/domains/catalog/schemas/: entry.py  public.py
api/atlas/domains/catalog/taxonomy/: __init__.py  search_terms.py
api/atlas/domains/discovery/: __init__.py  api.py  api_org.py  api_schedule.py  models.py  schemas.py  worker.py
api/atlas/domains/discovery/pipeline/: __init__.py  deduplicator.py  extractor.py  gap_analyzer.py  local_context.py  query_generator.py  ranker.py  runner.py  source_fetcher.py
api/atlas/domains/moderation/: __init__.py  api.py  models.py
api/atlas/models/: __init__.py  database.py  discovery_run.py  entry.py  schema.sql
api/atlas/pipeline/: __init__.py  deduplicator.py  extractor.py  gap_analyzer.py  local_context.py  query_generator.py  ranker.py  runner.py  source_fetcher.py
api/atlas/platform/: __init__.py  config.py  database.py  db_init.py  e2e_server.py  openapi.py
api/atlas/platform/http/: __init__.py  cache.py  router.py
api/atlas/platform/mcp/: __init__.py  auth_middleware.py  data.py  server.py
api/atlas/schemas/: __init__.py  entry.py  source.py
api/atlas/taxonomy/: __init__.py  issue_areas.py
api/openapi/: atlas.openapi.json
api/tests/: README.md  __init__.py  conftest.py  test_api.py  test_app_factory.py  test_database.py  test_database_schema.py  test_taxonomy.py
api/tests/domains/access/: test_auth.py  test_capabilities.py  test_challenges.py  test_health_api.py  test_irs_lookup.py  test_membership.py  test_org_dependencies.py  test_runtime_helpers.py  test_verification.py  test_verification_admin.py  test_verification_api.py
api/tests/domains/catalog/: test_api.py  test_api_v2.py  test_connections.py  test_edge_cases.py  test_org_annotations_api.py  test_org_resources_api.py  test_ownership.py  test_ownership_annotations.py  test_profile_claims.py  test_slugs.py  test_taxonomy.py
api/tests/domains/discovery/: test_api_edges.py  test_api_org.py  test_pipeline.py  test_schedule_api.py  test_schedule_crud.py  test_worker.py
api/tests/domains/moderation/: test_moderation_api.py
api/tests/platform/: test_database.py  test_mcp_auth_middleware.py  test_mcp_server.py  test_openapi.py  test_openapi_export.py  test_production_config.py  test_runtime_contracts.py
api/tests/support/: __init__.py  hypothesis_strategies.py
app/: .dockerignore  .env.e2e  .env.e2e.example  .env.example  .gitignore  .prettierignore  .spectral.yaml  Dockerfile  README.md  app.config.ts  eslint.config.js  orval.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  server.standalone.mjs  tsconfig.json  turbo.json  vercel.json  vercel.ts  vite.config.ts  vitest.config.ts
backend/: pyproject.toml
deploy/: Caddyfile
docs/: README.md  auth-architecture.md  roadmap.md  the-atlas-product.md  the-atlas-system-design.md  the-atlas-taxonomy.md
engine/: pyproject.toml
engine/src/atlas_discovery_engine/: __init__.py  dedup.py  extraction.py
frontend/: BUILD_SUMMARY.md  Dockerfile  README.md  eslint.config.js  package.json
libs/shared/: pyproject.toml
libs/shared/src/atlas_shared/: schemas.py  types.py
libs/shared/tests/: test_taxonomy.py
mcp/: server.json
mintlify/: docs.json  how-it-works.mdx  introduction.mdx  migration.mdx  package.json  quickstart-browse.mdx  quickstart-learn.mdx  taxonomy.mdx  what-is-atlas.mdx
openapi/: atlas.openapi.json
pipeline/: pyproject.toml
pipeline/src/atlas_scout/: __init__.py  cli.py  config.py  pipeline.py  runtime.py  scheduler.py  store.py
pipeline/src/atlas_scout/providers/: __init__.py  anthropic.py  base.py  ollama.py
pipeline/src/atlas_scout/scraper/: __init__.py  browser_researcher.py  crawler.py  extractor.py  fetcher.py
pipeline/src/atlas_scout/steps/: __init__.py  contribute.py  dedup.py  entity_chase.py  entry_extract.py  gap_analysis.py  query_gen.py  rank.py  source_fetch.py  validate.py  verify.py
pipeline/tests/: test_cli.py  test_config.py  test_contribute.py  test_pipeline.py  test_pipeline_throughput.py  test_scheduler.py  test_settings.py  test_store.py
pipeline/tests/test_providers/: test_anthropic.py  test_ollama.py
pipeline/tests/test_scraper/: test_crawler.py  test_fetcher.py
pipeline/tests/test_steps/: test_dedup.py  test_entry_extract.py  test_gap_analysis.py  test_query_gen.py  test_rank.py  test_source_fetch.py
scout/: pyproject.toml
scripts/: api-test.sh  bootstrap-gcp.sh  compose-validate.sh  contract-test.sh  docker.sh  e2e-api.sh  mcp-gen-publisher-key.mjs  mintlify-sync-openapi.sh  openapi-export.sh  portless-reset.sh  secrets-scan.sh  secrets-update-baseline.sh  setup-env.sh  tsconfig.json  validate-turbo-selectors.mjs
(+744 files in other folders)
