[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-api"
version = "0.1.0"
description = "API server for The Atlas — a discovery platform for people, organizations, and initiatives working on contemporary American issues."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Rebuilding America Team" }
]
keywords = ["atlas", "discovery", "issues", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "atlas-discovery-engine",
    "atlas-shared",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "anthropic>=0.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "PyJWT>=2.10.0",
    "trafilatura>=1.6.0",
    "aiosqlite>=0.19.0",
    "psycopg[binary]>=3.1",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.uv.sources]
atlas-discovery-engine = { path = "../libs/discovery-engine", editable = true }
atlas-shared = { path = "../libs/shared", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=atlas --cov-report=term-missing --cov-report=html --cov-fail-under=90"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific
]

ignore = [
    "E501",    # line-too-long (handled by formatter)
    "COM812",  # trailing-comma-missing (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "B008",    # function-call-in-default-argument (FastAPI Depends pattern)
    "PLW1641", # __eq__-without-__hash__ (not relevant for dataclasses)
    "ANN401",  # disallow-Any (needed for database adapter layer)
    "PLC0415", # import-not-at-top (needed for lazy imports to avoid circular deps)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "trafilatura.*",
    "aiosqlite.*",
    "psycopg.*",
]
ignore_missing_imports = true

[tool.pydantic]
# Pydantic v2 settings
json_encoders = {}

[tool.coverage.run]
branch = true
source = ["atlas"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/atlas/platform/mcp/*",
    "*/atlas/seed_profiles.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
