[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-discovery-engine"
version = "0.1.0"
description = "Shared discovery execution primitives for Atlas and Scout"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["atlas-shared"]

[tool.uv.sources]
atlas-shared = { path = "../shared", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_discovery_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "COM",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "COM812",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
