[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-scout"
version = "0.1.0"
description = "Atlas Scout — autonomous web discovery pipeline with pluggable LLM providers"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "atlas-shared",
    "httpx>=0.25.0",
    "trafilatura>=1.6.0",
    "aiosqlite>=0.19.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
anthropic = ["anthropic>=0.7.0"]
openai = ["openai>=1.0.0"]
google = ["google-genai>=1.0.0"]
all = ["atlas-scout[ollama,anthropic,openai,google]"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "respx>=0.22.0",
]

[project.scripts]
scout = "atlas_scout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_scout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "COM", "C4", "DTZ", "ISC", "PIE", "PT", "RET", "SIM", "TCH", "ARG", "PTH", "RUF"]
ignore = ["E501", "COM812", "ISC001"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.uv.sources]
atlas-shared = { path = "../shared", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.10",
]
