[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-shared"
version = "0.1.0"
description = "Shared types and taxonomy for the Atlas ecosystem"
requires-python = ">=3.12"
license = "MIT"
dependencies = ["pydantic>=2.5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "COM",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "COM812",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
